--- a/index.html
+++ b/index.html
@@ -40,29 +40,89 @@
         <div class="level"><h3>20</h3>LEVEL</div>
         <div>
           <h1>PIXALJO</h1>
-          <div class="designer-statistics"><img src="img/icons/designer-statistics.svg" alt="">DESIGNER STATISTICS</div>
+          <div class="designer-statistics"><img src="img/icons/designer-statistics.svg" alt="">ABOUT DESIGNER</div>
         </div>
       </div>
+
       <div class="logo">logo</div>
-      <div class="support-artist card">
-        <img src="img/graphics/cash.png" alt="" class="cash">
+
+      <div class="support-artist card -lg">
         <h2>SUPPORT ARTIST</h2>
-        <button><img src="img/icons/donate.svg" alt=""><span>DONATE</span></button>
+        <button><img src="img/icons/donate.svg" alt="">DONATE</button>
+        <img src="img/graphics/cash.png" alt="" class="img">
       </div>
+
       <div class="prices-clients">
-        <div class="prices">prices</div>
+        <div class="prices card" modal=".prices-modal">
+          <img src="img/icons/prices.svg" alt="" class="icon">
+          <h3>PRICES</h3>
+          <img src="img/graphics/gold-bars.png" alt="" class="img">
+        </div>
         <div class="clients">clients</div>
       </div>
-      <div class="team">team</div>
-      <div class="digital-art">digital art</div>
-      <div class="pixel-art">pixel art</div>
-      <div class="minecraft">minecraft</div>
+
+      <div class="my-team card">
+        <img src="img/icons/my-team.svg" alt="" class="icon">
+        <h3>MY<br>TEAM</h3>
+        <button modal=".my-team-modal .apply-modal"><img src="img/icons/list.png" alt="">APPLY</button>
+      </div>
+
+      <div class="digital-art card" modal=".digital-art-modal">
+        <img src="img/graphics/drawing-tablet.png" alt="" class="img">
+        <img src="img/icons/digital-art.svg" alt="" class="icon">
+        <h3>DIGITAL ART</h3>
+      </div>
+
+      <div class="pixel-art card" modal=".pixel-art-modal">
+        <img src="img/graphics/pixel-art.png" alt="" class="img">
+        <h3>PIXEL ART</h3>
+        <img src="img/icons/pixel-art.svg" alt="" class="icon">
+      </div>
+
+      <div class="minecraft-models card" modal=".minecraft-models-modal">
+        <img src="img/graphics/minecraft-model.png" alt="" class="img">
+        <img src="img/icons/minecraft-models.svg" alt="" class="icon">
+        <h3>MINECRAFT<br>MODELS</h3>
+      </div>
+
       <div class="reviews">reviews</div>
       <div class="contact">contact</div>
       <div class="social">social</div>
 
+      <div class="close-btn card -sm">
+        <h2>CLOSE</h2>
+      </div>
+      
+      <div class="prices-modal modal">
+        <img src="img/graphics/gold-bars.png" alt="" class="img">
+        <h2>PRICES</h2>
+      </div>
+
+      <div class="my-team-modal modal">
+        <h2>MY TEAM</h2>
+      </div>
+      <div class="apply-modal modal">
+        <h2>APPLY</h2>
+      </div>
+
+      <div class="digital-art-modal modal">
+        <img src="img/graphics/drawing-tablet.png" alt="" class="img">
+        <h2>DIGITAL ART</h2>
+      </div>
+
+      <div class="pixel-art-modal modal">
+        <img src="img/graphics/pixel-art.png" alt="" class="img">
+        <h2>PIXEL ART</h2>
+      </div>
+
+      <div class="minecraft-models-modal modal">
+        <img src="img/graphics/minecraft-model.png" alt="" class="img">
+        <h2>MINECRAFT MODELS</h2>
+      </div>
     </div>
   </div>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"></script>
   <script src="js/script.js"></script>
 </body>
 </html>
